Fixed background colour covering on mobile and small screens

--- a/production-page/styles/stylesheet.css
+++ b/production-page/styles/stylesheet.css
@@ -28,32 +28,47 @@ html,body{height:100%;}
 
 }
 
-.first-section {
-  height: 73vh; /* Not sure this works on mobiles*/
-}
-
 .section {
   height: 100vh;
 }
 
+.first-section {
+  min-height: 73vh;
+  overflow: hidden;
+  height: auto;
+
+  background-color: rgba(8, 35, 62, 0.8);
+}
+
+.second-section {
+  /*padding-top: 60px;*/
+  background-color: rgba(0, 255, 0, 0.7);
+}
+
 .transy{
   width: 100%;
-  height: 100vh;
+  /*height: 100vh;*/
   float: left;
   opacity: 0.8;
   filter: opacity(80%);
   position: absolute;
   z-index: 0;
+
 }
 
 #buttons {
  /* position: relative;
   top: 30%;
   transform: translateY(-50%);*/
+  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 #blue {
   background: #08233e;
+  padding-bottom: 1500px;
+  margin-bottom: -1500px;
+  right: 0;
 }
 
 #green {
